# PaperTree

./: README.md  docker-compose.yml
apps/api/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
apps/api/papertree_api/: config.py  database.py  main.py
apps/api/papertree_api/auth/: models.py  routes.py  utils.py
apps/api/papertree_api/canvas/: __init__.py  models.py  routes.py  service.py  services.py
apps/api/papertree_api/explanations/: models.py  routes.py  services.py
apps/api/papertree_api/highlights/: __init__.py  models.py  routes.py
apps/api/papertree_api/papers/: __init__.py  extraction.py  llm_service.py  models.py  routes.py  services.py
apps/api/papertree_api/services/: ai.py
apps/web/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/app/register/: page.tsx
apps/web/src/components/: Mermaid.tsx
apps/web/src/components/auth/: AuthGuard.tsx
apps/web/src/components/canvas/: CanvasAIPanel.tsx  CanvasToolbar.tsx  MermaidRenderer.tsx  PaperCanvas.tsx  RichCanvasNode.tsx
apps/web/src/components/dashboard/: PaperList.tsx  UploadModal.tsx
apps/web/src/hooks/: useCanvas.ts  useHighlights.ts
apps/web/src/lib/: api.ts  auth.ts  utils.ts
apps/web/src/store/: authStore.ts  canvasStore.ts  highlightStore.ts  readerStore.ts
apps/web/src/types/: canvas.ts  highlight.ts  index.ts
(+24 files in other folders)
